[workspace]
members = [
    "day5b",
    "day5a",
    "day4b",
    "day4a",
    "day3b",
    "day3a",
    "day2b",
    "day2a",
    "day1b",
    "aoc",
    "day14a",
    "day14b",
    "day1a",
    "template",
    "aoc-cli",
]

[workspace.package]
edition = "2021"
authors = ["Marcelo Fornet <mfornet94@gmail.com>"]
rust-version = "1.64.0"

[workspace.dependencies]
clap = { version = "4.0.29", features = ["derive"] }
itertools = "0.10.5"
regex = "1.7.0"
toml = "0.5.9"
reqwest = { version = "0.11.13", features = ["blocking"] }
dotenv = "0.15.0"
html-escape = "0.2.12"
