[package]
name = "aoc-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc-cli"
path = "src/main.rs"

[dependencies]
clap.workspace = true
regex.workspace = true
toml.workspace = true
reqwest.workspace = true
dotenv.workspace = true
