[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "aoc-cli"
path = "src/main.rs"

[dependencies]
clap.workspace = true
regex.workspace = true
toml.workspace = true
